Converted the shell script launcher to Django.

--- a/geordi/templates/geordi/geordi.html
+++ b/geordi/templates/geordi/geordi.html
@@ -1,7 +1,7 @@
 <html>
 {% load static %}
     <head>
-        <title>Profile data for {{ method }} {{ url }}</title>
+        <title>Geordi profiler</title>
         <script src="{% static 'geordi/js/vis.min.js' %}"></script>
         <script src="{% static 'geordi/js/geordi.js' %}"></script>
         <link href="{% static 'geordi/css/vis.min.css' %}" rel="stylesheet">
